# screenshot-rs

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/: screen.rs
src/: lib.rs
