[package]
name = "screenshot"
version = "0.0.7"
edition = "2024"
authors = ["Alex <alexchandel@gmail.com>"]
description = "Get a bitmap image of any display."
keywords = ["graphics", "image", "gui", "scripting"]
repository = "https://github.com/alexchandel/screenshot-rs"
readme = "README.md"
license = "CC0-1.0"

[target.'cfg(target_os = "linux")'.dependencies]
xlib = { git = "https://github.com/servo/rust-xlib" }

[dependencies]
libc = "0.2.175"

[dev-dependencies]
bmp = "0.5.0"
image = "0.25.6"
